Add namespace-able Roles/RoleBindings (#309)
* Rename thoras.labels template

* Conditionally switch between Role and ClusterRole

* Add rbac.namespaces into README

* Fix issue with .namespace vs .rbacNamespace

* Drop namespace from roleRef

* Extract thoras.ai API specific ClusterRoles

* Drop rbac namespace from role names

* Update unit tests

* Reorder some name+namespace values

* Reorder some rbac namespace/name values

* Reorder some more rbacRef name values

* Remove quotes from thoras-collector

--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-agent
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
@@ -14,13 +14,13 @@ spec:
     metadata:
       labels:
         app: thoras-agent
-        {{- include "labels" . | nindent 8 }}
+        {{- include "thoras.labels" . | nindent 8 }}
         {{- with .Values.thorasAgent.labels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/port: {{ .Values.thorasAgent.containerPort | quote}}
+        prometheus.io/port: {{ .Values.thorasAgent.containerPort | quote }}
       {{- with .Values.thorasAgent.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
