--- a/charts/thoras/templates/dashboard/nginx-config-map.yaml
+++ b/charts/thoras/templates/dashboard/nginx-config-map.yaml
@@ -29,7 +29,7 @@ data:
         }
 
         location / {
-          proxy_pass http://localhost:{{ ternary .Values.thorasDashboard.v2.containerPort .Values.thorasDashboard.containerPort .Values.thorasDashboard.v2.enabled }};
+          proxy_pass http://localhost:{{ .Values.thorasDashboard.containerPort }};
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,7 +45,7 @@ data:
       include       mime.types;
 
       server {
-        listen       {{ .Values.thorasDashboard.v2.containerPort }};
+        listen       {{ .Values.thorasDashboard.containerPort }};
         server_name  localhost;
 
         root   /usr/share/nginx/html;
