--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -26,9 +26,9 @@ tests:
       - failedTemplate: {}
   - it: Uses the reference name if it's passed
     templates:
-      - collector/rbac.yaml
+      - collector/service-account.yaml
       - operator/rbac.yaml
-      - dashboard/rbac.yaml
+      - dashboard/service-account.yaml
     set:
       imageCredentials:
         secretRef: "frou-frou"
