--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -13,7 +13,7 @@ spec:
       ttlSecondsAfterFinished: 86400
       template:
         spec:
-          serviceAccountName: thoras-collector
+          serviceAccountName: {{ .Values.metricsCollector.serviceAccount.name }}
           restartPolicy: OnFailure
           containers:
           - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.metricsCollector.collector.imageTag }}
