--- a/charts/thoras/templates/collector/service-account.yaml
+++ b/charts/thoras/templates/collector/service-account.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: thoras-collector
+  name: {{ .Values.metricsCollector.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
 {{- if .Values.imageCredentials.secretRef }}
