--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -34,7 +34,7 @@ spec:
       {{- end }}
       name: thoras-operator
     spec:
-      serviceAccountName: thoras-operator
+      serviceAccountName: {{ .Values.thorasOperator.serviceAccount.name }}
       volumes:
         - name: tls
           secret:
