--- a/charts/thoras/templates/monitor/deployment.yaml
+++ b/charts/thoras/templates/monitor/deployment.yaml
@@ -28,7 +28,7 @@ spec:
           {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      serviceAccountName: thoras-monitor
+      serviceAccountName: {{ .Values.thorasMonitor.serviceAccount.name }}
       volumes:
       - name: config
         configMap:
