--- a/charts/thoras/templates/reasoning-api/deployment.yaml
+++ b/charts/thoras/templates/reasoning-api/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
-      serviceAccountName: {{ .Values.metricsCollector.serviceAccount.name }}
+      serviceAccountName: {{ .Values.thorasReasoning.serviceAccount.name }}
       containers:
       - image: {{ .Values.imageCredentials.registry }}/thoras-forecast:{{ default .Values.thorasVersion .Values.thorasReasoning.api.imageTag }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
