--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -27,8 +27,10 @@ tests:
   - it: Uses the reference name if it's passed
     templates:
       - collector/service-account.yaml
-      - operator/rbac.yaml
+      - operator/service-account.yaml
       - dashboard/service-account.yaml
+      - api-server-v2/service-account.yaml
+      - forecast-worker/service-account.yaml
     set:
       imageCredentials:
         secretRef: "frou-frou"
