Don't add service account for monitor if disabled

--- a/charts/thoras/templates/monitor/service-account.yaml
+++ b/charts/thoras/templates/monitor/service-account.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.thorasMonitor.enabled }}
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -11,4 +12,5 @@ imagePullSecrets:
   - name: {{ .Values.imageCredentials.secretRef }}
 {{- else }}
   - name: thoras-secret-registry
+{{- end }}
 {{- end }}
