--- a/charts/thoras/templates/api-server-v2/rbac.yaml
+++ b/charts/thoras/templates/api-server-v2/rbac.yaml
@@ -107,6 +107,12 @@ rules:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - ''
+  resources:
+  - 'namespaces'
+  verbs:
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
