--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -57,6 +57,10 @@ spec:
             value: "{{ default 600 .Values.thorasForecast.worker.forecastTimeout }}"
           - name: OMP_NUM_THREADS
             value: "1"
+          {{- with .Values.thorasForecast.worker.retrainSteadyStateHours }}
+          - name: RETRAIN_STEADY_STATE_HOURS
+            value: {{ printf "%.3f" (max (float64 .) 1.0) | quote }}
+          {{- end }}
         resources:
           requests:
             cpu: {{ .Values.thorasForecast.worker.requests.cpu }}
