--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -186,7 +186,7 @@ thorasForecast:
     replicas: 1
     pollingInterval: 15
     podAnnotations: {}
-    retrainSteadyStateHours: null
+    retrainSteadyStateHours: ""
     labels: {}
     limits:
       memory: 2Gi
