--- a/charts/thoras/tests/forecast_worker_test.yaml
+++ b/charts/thoras/tests/forecast_worker_test.yaml
@@ -117,3 +117,61 @@ tests:
           content:
             name: RETRAIN_STEADY_STATE_HOURS
             value: "1"
+
+  - it: sets RETRAIN_OVERRIDE_HOURS when value is an integer
+    set:
+      thorasForecast:
+        worker:
+          retrainOverrideHours: 10
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: RETRAIN_OVERRIDE_HOURS
+            value: "10"
+
+  - it: sets RETRAIN_OVERRIDE_HOURS when value is a float
+    set:
+      thorasForecast:
+        worker:
+          retrainOverrideHours: 10.0
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: RETRAIN_OVERRIDE_HOURS
+            value: "10"
+
+  - it: omits RETRAIN_OVERRIDE_HOURS when value is null
+    set:
+      thorasForecast:
+        worker:
+          retrainOverrideHours: null
+    asserts:
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: RETRAIN_OVERRIDE_HOURS
+
+  - it: omits RETRAIN_OVERRIDE_HOURS when value is empty string
+    set:
+      thorasForecast:
+        worker:
+          retrainOverrideHours: ""
+    asserts:
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: RETRAIN_OVERRIDE_HOURS
+
+  - it: does not clamp RETRAIN_OVERRIDE_HOURS when below 1.0
+    set:
+      thorasForecast:
+        worker:
+          retrainOverrideHours: 0.1
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: RETRAIN_OVERRIDE_HOURS
+            value: "0.1"
