--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -38,13 +38,14 @@ tests:
           path: imagePullSecrets[0].name
           value: "frou-frou"
 
-# Collector has its own tests for this
+  # Collector has its own tests for this
   - it: Points all apps to existing slack secret, if provided
     templates:
       - api-server-v2/deployment.yaml
       - monitor/deployment.yaml
       - operator/deployment.yaml
       - reasoning-api/deployment.yaml
+      - worker/deployment.yaml
     set:
       slackWebhookUrlSecretRefName: "frou-frou"
       slackWebhookUrlSecretRefKey: "url"
@@ -67,6 +68,7 @@ tests:
       - monitor/deployment.yaml
       - operator/deployment.yaml
       - reasoning-api/deployment.yaml
+      - worker/deployment.yaml
     set:
       thorasMonitor:
         enabled: true
@@ -83,6 +85,7 @@ tests:
   - it: Should set the SERVICE_CLUSTER_NAME environment variables
     templates:
       - api-server-v2/deployment.yaml
+      - worker/deployment.yaml
     set:
       cluster:
         name: "test_dev"
