Default disable thoras worker

--- a/charts/thoras/tests/all_deployments_test.yaml
+++ b/charts/thoras/tests/all_deployments_test.yaml
@@ -9,6 +9,8 @@ set:
   thorasMonitor:
     enabled: true
     unittesting: true
+  thorasWorker:
+    enabled: true
   thorasDashboard:
     unittesting: true
   thorasReasoning:
