--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -53,6 +53,8 @@ tests:
         enabled: true
       thorasReasoning:
         enabled: true
+      thorasWorker:
+        enabled: true
     asserts:
       - equal:
           path: $..spec.containers[0].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.name
@@ -74,6 +76,8 @@ tests:
         enabled: true
       thorasReasoning:
         enabled: true
+      thorasWorker:
+        enabled: true
     asserts:
       - equal:
           path: $..spec.containers[-1].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.name
@@ -89,6 +93,8 @@ tests:
     set:
       cluster:
         name: "test_dev"
+      thorasWorker:
+        enabled: true
     asserts:
       - equal:
           path: $..spec.containers[0].env[?(@.name =~ /SERVICE_CLUSTER_NAME$/)].value
