--- a/charts/thoras/tests/select_deployments_test.yaml
+++ b/charts/thoras/tests/select_deployments_test.yaml
@@ -19,6 +19,7 @@ set:
   thorasApiServerV2:
     replicas: 12
   thorasWorker:
+    enabled: true
     replicas: 12
 tests:
   - it: Image registry should be correct
