--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.thorasWorker.enabled }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -98,3 +99,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
