--- a/charts/thoras/tests/worker_deployment_test.yaml
+++ b/charts/thoras/tests/worker_deployment_test.yaml
@@ -1,6 +1,9 @@
 suite: Worker Deployment
 templates:
   - worker/deployment.yaml
+set:
+  thorasWorker:
+    enabled: true
 tests:
   - it: Should set tolerations if specified
     set:
