--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -135,6 +135,7 @@ thorasApiServerV2:
   restartWorkloadOnCpu: false
 
 thorasWorker:
+  enabled: false
   serviceAccount:
     name: thoras-worker
   podAnnotations: {}
