Trim unnecessary rbac (#312)
* Drop unnecessary dashboard RBAC requests

* Drop unnecessary thoras-collector rbac

* Add customizable thoras-collector service account name

* Add configurable service account names

* Don't add service account for monitor if disabled

* Update readme with new values

--- a/charts/thoras/templates/collector/service-account.yaml
+++ b/charts/thoras/templates/collector/service-account.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-  name: thoras-forecast-worker
+  name: {{ .Values.metricsCollector.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
 {{- if .Values.imageCredentials.secretRef }}
