--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -26,9 +26,11 @@ tests:
       - failedTemplate: {}
   - it: Uses the reference name if it's passed
     templates:
-      - collector/rbac.yaml
-      - operator/rbac.yaml
-      - dashboard/rbac.yaml
+      - collector/service-account.yaml
+      - operator/service-account.yaml
+      - dashboard/service-account.yaml
+      - api-server-v2/service-account.yaml
+      - forecast-worker/service-account.yaml
     set:
       imageCredentials:
         secretRef: "frou-frou"
