--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -42,6 +42,8 @@ rbac:
 thorasOperator:
   # Operator is a singleton -- don't change this :)
   replicas: 1
+  serviceAccount:
+    name: thoras-operator
   podAnnotations: {}
   labels: {}
   limits:
@@ -64,6 +66,8 @@ metricsCollector:
     pvcStorageRequestSize: "3Gi"
   podAnnotations: {}
   labels: {}
+  serviceAccount:
+    name: thoras-collector
   collector:
     name: thoras-collector
     limits:
@@ -176,6 +180,8 @@ thorasDashboard:
 
 thorasMonitor:
   enabled: false
+  serviceAccount:
+    name: thoras-monitor
   unittesting: false
   limits:
     memory: "8192Mi"
@@ -187,6 +193,8 @@ thorasMonitor:
   config: |
 
 thorasForecast:
+  serviceAccount:
+    name: thoras-forecast-worker
   skipCache: false
   requests:
     cpu: "256m"
@@ -220,6 +228,8 @@ thorasAgent:
 
 thorasReasoning:
   enabled: false
+  serviceAccount:
+    name: thoras-reasoning-api
   connectors:
     prometheus:
       baseUrl: "http://localhost"
