Add service account unit test for thoras worker

--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -31,7 +31,10 @@ tests:
       - dashboard/service-account.yaml
       - api-server-v2/service-account.yaml
       - forecast-worker/service-account.yaml
+      - worker/service-account.yaml
     set:
+      thorasWorker:
+        enabled: true
       imageCredentials:
         secretRef: "frou-frou"
     documentIndex: 0
