--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -104,6 +104,8 @@ spec:
             value: "http://thoras-blob-api.thoras.svc.cluster.local"
           - name: SERVICE_TIMESCALE_PRIMARY
             value: {{ .Values.thorasApiServerV2.timescalePrimary | quote}}
+          - name: SERVICE_TIMESCALE_SNAPSHOT_PRIMARY
+            value: {{ .Values.thorasApiServerV2.timescaleSnapshotPrimary | quote}}
           - name: SERVICE_QUERIES_PER_SECOND
             value: {{ .Values.thorasApiServerV2.queriesPerSecond | default .Values.queriesPerSecond | quote }}
           - name: SERVICE_CATALOG_REFRESH_INTERVAL
