Don't run jobs from the API server when the worker is enabled

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -116,6 +116,8 @@ spec:
                 fieldPath: metadata.namespace
           - name: SERVICE_RESTART_WORKLOAD_ON_CPU
             value: {{ .Values.thorasApiServerV2.restartWorkloadOnCpu | quote }}
+          - name: SERVICE_WORK_QUEUE_ENABLED
+            value: {{ not .Values.thorasWorker.enabled | quote }}
         ports:
         - containerPort: {{ .Values.thorasApiServerV2.containerPort }}
         startupProbe:
